Theme: bump to v1.3.1, fix overflow issue

--- a/themes/type/src/css/components/content.styl
+++ b/themes/type/src/css/components/content.styl
@@ -15,6 +15,7 @@
 
   a:not([id^=fnref])
     border-bottom: 1px dashed $meta-color
+    overflow-wrap: break-word
 
   & > table
     border-collapse: collapse
@@ -36,6 +37,7 @@
     border-left: 2px solid $highlight-color
     font-style: italic
     padding-left: $gap-m
+    overflow: scroll
 
   ol, ul
     margin-bottom: $gap-m
